--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,4 +1,15 @@
 /* Add here all your CSS customizations */
-. hidden {
+.hidden {
 	display: None
+}
+
+.nav-logo {
+	width : 15%;
+	padding-top: 1%
+}
+
+.intro-title {
+	font-size: 50%;
+	font-weight: 300;
+	color: black;
 }
