Fixed Title Text and Logo

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -8,8 +8,8 @@
 	padding-top: 1%
 }
 
-.intro-title {
-	font-size: 50%;
-	font-weight: 300;
-	color: black;
-}
+/*.intro-title {*/
+/*	font-size: 50%;*/
+/*	font-weight: 300;*/
+/*	color: black;*/
+/*}*/
